# hamal

./: .gitignore  README.md  build.gradle.kts  deploy.sh  gradle.properties  gradlew  package-lock.json  pom.xml  settings.gradle.kts
.github/workflows/: ci.yml
_infra/: set-git-hash.sh
_infra/dev/: README.md  docker-compose.yml
agent/impl/: build.gradle.kts
app/candy-rocks/: build.gradle.kts
app/fn-guru/: build.gradle.kts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/hamal-backend/: build.gradle.kts
app/hamal-mono/: build.gradle.kts
app/hamal-runner/: build.gradle.kts
app/nyanbot/: build.gradle.kts  package.json  pnpm-lock.yaml  vite.config.ts
app/web3proxy/: build.gradle.kts
app/web3proxy-old/: build.gradle.kts
application/: build.gradle.kts  pom.xml
application/crypto/: get_next_blocks.lua
application/defi/: bsc_next_blocks.lua  call_contract.lua  eth_next_blocks.lua  find_interaction_in_block.lua  next_blocks.lua
application/proxy/: build.gradle.kts
application/web3/: get_next_blocks.lua
backend/application/: build.gradle.kts
backend/core/: build.gradle.kts
backend/impl/: build.gradle.kts
backend/infra/: build.gradle.kts
backend/instance/: build.gradle.kts
backend/request/: build.gradle.kts
backend/usecase/: build.gradle.kts
bootstrap/: build.gradle.kts
buildSrc/: build.gradle.kts
core/: README.md
core/agent/: build.gradle.kts
core/bootstrap/: build.gradle.kts
core/frontend/: build.gradle.kts
extension/starter/: build.gradle.kts
extension/web3/: build.gradle.kts
faas/: README.md
faas/bootstrap/: build.gradle.kts
faas/frontend/: build.gradle.kts
faas/mono/: build.gradle.kts
faas/runner/: build.gradle.kts
frontend/: build.gradle.kts
lib/: build.gradle.kts  pom.xml
lib/common/: build.gradle.kts
lib/core/: build.gradle.kts
lib/ddd/: build.gradle.kts  pom.xml
lib/domain/: build.gradle.kts  pom.xml
lib/domain-notification/: build.gradle.kts
lib/domain-value-object/: build.gradle.kts  pom.xml
lib/http/: build.gradle.kts
lib/klua/: build.gradle.kts
lib/kua/: build.gradle.kts
lib/kua/native/kua/: CMakeLists.txt  Makefile  kua.c
lib/kua/native/kua/include/: kua_builtin.h  kua_builtin_decimal.h  kua_builtin_error.h  kua_call.h  kua_check.h  kua_common.h  kua_error.h  kua_info.h  kua_jni.h  kua_jni_error.h  kua_kotlin.h  kua_macro.h  kua_memory.h  kua_stack.h  kua_state.h  kua_table.h
lib/kua/native/kua/src/: kua.c  kua_builtin.c  kua_builtin_base.c  kua_builtin_base.h  kua_builtin_decimal.c  kua_builtin_decimal.h  kua_builtin_error.c  kua_call.c  kua_check.c  kua_common.c  kua_error.c  kua_info.c  kua_jni.c  kua_jni_error.c  kua_kotlin.c  kua_load.c  kua_memory.c  kua_memory_arena.c  kua_memory_arena.h  kua_stack.c  kua_state.c  kua_table.c  playground.c
lib/kua/native/lua/: CMakeLists.txt
lib/kua/native/lua/include/: lbaselib.h  luaconf.h
lib/kua/native/lua/src/: lapi.c  lbaselib.c  lcorolib.c  ldebug.c  llex.c  lmem.c  loadlib.c  lopcodes.c  lstrlib.c  lua.c
lib/lib-ddd/: pom.xml
lib/lib-domain/: pom.xml
lib/lib-meta/: pom.xml
lib/log/: build.gradle.kts
lib/meta/: build.gradle.kts  pom.xml
lib/sdk/: build.gradle.kts
lib/sqlite/: build.gradle.kts
lib/util/: build.gradle.kts
lib/web3/: build.gradle.kts
module/: pom.xml
module/launchpad/: pom.xml
module/orchestrator/: pom.xml
module/queue/: pom.xml
native/kua/: CMakeLists.txt
native/kua/include/: kua_builtin_base.h  kua_builtin_decimal.h  kua_builtin_error.h  kua_builtin_table.h  kua_check.h  kua_jni_error.h  kua_load.h  kua_memory.h  kua_reference.h  kua_stack.h  kua_state.h  kua_table.h
native/kua/src/: kua_builtin.c  kua_builtin_base.c  kua_builtin_decimal.c  kua_builtin_error.c  kua_builtin_table.c  kua_call.c  kua_check.c  kua_common.c  kua_info.c  kua_jni.c  kua_jni_error.c  kua_load.c  kua_memory_arena.c  kua_memory_arena.h  kua_reference.c  kua_stack.c  kua_state.c  kua_table.c  playground.c
native/mpdecimal-100/: CMakeLists.txt
native/mpdecimal-100/include/: lmpdecimal.h  mpdecimal.h  typearith.h
native/mpdecimal-100/src/: README.txt  constants.c  context.c  crt.c  io.c  lmpdecimal.c  mpalloc.c  mpdecimal.c  mpsignal.c  numbertheory.c
platform/: README.md
script/: build.gradle.kts
web3proxy/: build.gradle.kts
(+9121 files in other folders)
